# QTAllinOne

./: .gitignore  CMakeLists.txt  Main.qml  Resources.qrc  main.cpp  qml_files.qrc
.kiro/specs/qt-quick3d-docs/: design.md  requirements.md  tasks.md
.kiro/specs/shader-effects-docs/: design.md  requirements.md  tasks.md
HuskarUI/imports/HuskarUI/Basic/: qmldir
HuskarUI/plugins/HuskarUI/Basic/: plugins.qmltypes  qmldir  (+1 more)
docs/: 1.txt  CPP_TEMPLATE_TUTORIAL.md  CPP容器与Qt容器深度解析.md  FFmpeg入门与视频播放器开发指南.md  HuskarUI集成问题解决方案.md  QML开发核心概念与细节指南.md  QQuickItem_C++_API详解.md  QQuickItem详解与实战.md  QQuickWindow_C++_API详解.md  QQuickWindow详解与实战.md  Qt6_OpenGL编程完全指南.md  Qt6_QML网络编程完全指南.md  Qt6_QML资源管理完全指南.md  Qt6_Quick3D_API参考手册.md  Qt6_Quick3D_CustomMaterial完全指南.md  Qt6_Quick3D性能优化与高级技巧.md  Qt6_Quick3D编程完全指南.md  Qt6事件系统完全指南.md  Qt6数据库编程完全指南.md  Qt元对象系统与元数据深度解析.md  Qt多线程开发完全指南.md  渲染方程与光照模型深度解析.md
docs/Engine/: design.md  old_design.md  requirements.md  tasks.md  架构优化建议与3D引擎设计指南.md  架构总结与线程时序分析.md
docs/FFMPEG/: ffmpeg_opengl.md  ffmpeg_qt6_integration_guide.md
docs/Quick3D/: .gitkeep  README.md  TEMPLATE.md  YAML_TEMPLATE.yaml
docs/Quick3D/01-Core-Components/: Camera.md  CustomMaterial.md  DirectionalLight.md  Dynamic-Model-Creation.md  Lights.md  Loader3D.md  Meshes.md  Model.md  PrincipledMaterial.md
docs/Quick3D/02-Scene-Animation/: 2D-in-3D-integration-Direct-Path.md  Animation.md  Instanced-Rendering.md  Morphing-Animation.md  Repeater3D.md  Skeletal-Animation.md  SpotLight.md
docs/Quick3D/03-Integration-Rendering/: 2D-in-3D-Integration-Texture-Path.md  3D-in-2D-integration.md  Frontend-Backend-synchronization.md  Qt-Quick-Spatial-Scene-Graph.md  Quick-3D.md  Scene-Manager.md  Scene-Rendering.md  Set-up-Render-Target.md  View3D-renderMode.md
docs/Quick3D/04-Advanced-Features/: Anti-Aliasing-Techniques.md  High-Level-render-preparation.md  Image-Based-Lighting.md  Low-Level-render-preparation.md  Optimizing-2D-Assets.md  Optimizing-3D-Assets.md  Physically-Based-Rendering.md  Post-Processing-Effects.md  Post-Processing.md  Prepare-for-Render.md  Super-Sampling-Antialiasing-SSAA.md  Temporal-and-Progressive-Antialiasing.md
docs/Quick3D/05-Tools/: Balsam-Asset-Import-Tool.md  Shadergen-Tool.md
docs/Quick3D/ShaderEffect/: README.md
docs/Templates/: CPP_Template_Programming_Guide.md
src/CPP/: DeepCopy.hpp  FactoryTest.hpp  VirtualFunctionTest.hpp  VirtualInherit.hpp  global_macro.hpp  template_test.hpp
src/OpenGL/: OpenGLItemRenderer.cpp  OpenGLItemRenderer.hpp  irenderer.hpp  opengl_item.cpp  opengl_item.hpp  render.cpp  render_config.hpp  render_context.hpp  render_factory.hpp  triangle_render.cpp  triangle_render.hpp
src/QML_Files/Buttons/: ThreeDSwitch.qml
src/Shaders/: triangle.frag.glsl  triangle.vert.glsl
src/cpp_painter/: CMakelists.txt  cpp_painter.cpp  cpp_painter.hpp
(+10 files in other folders)
